--- a/Pre_1.qmd
+++ b/Pre_1.qmd
@@ -107,7 +107,7 @@ ggplotly(p1) %>%
 
 ------------------------------------------------------------------------
 
-## 🌡️ Isla de Calor {background-color="#8b0000"}
+## Isla de Calor {background-color="#8b0000"}
 
 ::: columns
 ::: {.column width="50%"}
@@ -128,6 +128,7 @@ ggplotly(p1) %>%
 -   **Densidad vehicular** alta\
 :::
 :::
+------------------------------------------------------------------------
 
 ## Temperatura superficial 2024
 
@@ -211,7 +212,7 @@ ggplotly(p2) %>%
 
 ## Crecimiento y Huella Urbana {background-color="#FDF5E6" auto-animate="true"}
 
-![](Datos/mapa.png){fig-align="center"}
+![Vegetación y cambios](Datos/mapa.png){fig-align="center"}
 
 ------------------------------------------------------------------------
 
@@ -263,8 +264,8 @@ m2 <- maplibre(zoom = 9, center = c(-89.617, 20.967)) |>
 mapgl::compare(m1, m2)
 ```
 
-------------------------------------------------------------------------
 
+-----------------------------------------------------------------------
 
 ## Temperatura y Vegetación {background-color="#2c3e50"}
 
@@ -281,6 +282,9 @@ mapgl::compare(mapgltemp, m2)
 
 
 ```{r}
+#| message: false
+#| warning: false
+#| include: false
 agua <- sf::st_read("Datos/open_street_cenotes.gpkg")
 
 cuerposagua <- mapview::mapview(agua)
@@ -297,50 +301,10 @@ cuerposagua
 ### **🛰️ Monitoreo Tecnológico**
 
 -   **Pozos de monitoreo**: 15 activos CONAGUA
--   **Sensores nivel freático**: Red IoT emergente
--   **Imágenes satelitales**: Cambios cenotes
--   **Drones acuáticos**: Mapeo batimétrico
+-   **Sensores nivel freático**
+-   **Imágenes satelitales**
 
-```{r mapa-cenotes}
-#| fig-cap: "Cenotes y Pozos Urbanos Mérida"
-
-library(leaflet)
-
-# Datos cenotes y pozos principales en zona urbana
-cenotes_pozos <- data.frame(
-  nombre = c("Cenote Xlacah", "Cenote San Ignacio", "Pozo Norte 1", "Pozo Centro",
-             "Cenote Sambulá", "Pozo Sur 2", "Pozo Oriente", "Cenote Dzonot Carpio"),
-  lat = c(21.058, 20.978, 20.985, 20.967, 20.945, 20.940, 20.970, 20.920),
-  lng = c(-89.612, -89.630, -89.640, -89.617, -89.625, -89.615, -89.595, -89.605),
-  tipo = c("Cenote", "Cenote", "Pozo", "Pozo", "Cenote", "Pozo", "Pozo", "Cenote"),
-  profundidad_m = c(15, 12, 45, 38, 8, 52, 41, 20),
-  estado = c("Natural", "Urbano", "Activo", "Activo", "Amenazado", "Activo", "Activo", "Natural")
-)
-
-# Crear mapa
-leaflet(cenotes_pozos) %>%
-  addTiles() %>%
-  addCircleMarkers(
-    ~lng, ~lat,
-    color = ~case_when(
-      tipo == "Cenote" & estado == "Natural" ~ "#2ecc71",
-      tipo == "Cenote" & estado != "Natural" ~ "#f39c12", 
-      tipo == "Pozo" ~ "#3498db",
-      TRUE ~ "#e74c3c"
-    ),
-    popup = ~paste("<b>", nombre, "</b><br>",
-                   "Tipo:", tipo, "<br>",
-                   "Profundidad:", profundidad_m, "m<br>",
-                   "Estado:", estado),
-    radius = ~sqrt(profundidad_m),
-    opacity = 0.8
-  ) %>%
-  addLegend("bottomright",
-           colors = c("#2ecc71", "#f39c12", "#3498db"),
-           labels = c("Cenote Natural", "Cenote Urbano", "Pozo Abastecimiento"),
-           title = "Fuentes de Agua") %>%
-  setView(lng = -89.617, lat = 20.967, zoom = 11)
-```
+--------------------------------------------------------------------------
 
 ### **📊 Datos Críticos**
 
@@ -353,8 +317,6 @@ leaflet(cenotes_pozos) %>%
 
 ## 🚗 Movilidad Sostenible: Retos y Oportunidades {background-color="#34495e"}
 
-::: columns
-::: {.column width="50%"}
 ### **El Desafío de la Movilidad**
 
 🚗 **85%** viajes en transporte privado
@@ -371,44 +333,7 @@ leaflet(cenotes_pozos) %>%
 -   **20 μg/m³** PM2.5 promedio anual
 -   **8 días** contingencias 2024
 -   **+28%** parque vehicular (2019-2024)
-
-```{r modal-split}
-#| fig-cap: "División Modal Mérida vs Ciudades Sustentables"
-
-# Datos división modal
-ciudades <- data.frame(
-  Ciudad = rep(c("Mérida", "Copenhague", "Medellín", "Bogotá"), each = 4),
-  Modo = rep(c("Auto privado", "Transporte público", "Bicicleta", "Caminata"), 4),
-  Porcentaje = c(
-    # Mérida
-    58, 25, 2, 15,
-    # Copenhague
-    25, 20, 35, 20,
-    # Medellín
-    35, 40, 5, 20,
-    # Bogotá
-    25, 55, 5, 15
-  )
-)
-
-p5 <- ggplot(ciudades, aes(x = Ciudad, y = Porcentaje, fill = Modo)) +
-  geom_bar(stat = "identity", position = "stack", alpha = 0.8) +
-  scale_fill_manual(values = c("Auto privado" = "#e74c3c", "Transporte público" = "#3498db",
-                              "Bicicleta" = "#2ecc71", "Caminata" = "#f39c12")) +
-  labs(
-    title = "División Modal: Mérida vs Ciudades Referencia",
-    subtitle = "% de viajes por modo de transporte",
-    x = "Ciudad", y = "Porcentaje de Viajes (%)",
-    fill = "Modo de Transporte"
-  ) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-ggplotly(p5) %>%
-  layout(plot_bgcolor = 'rgba(0,0,0,0)', paper_bgcolor = 'rgba(0,0,0,0)')
-```
-:::
-
-::: {.column width="50%"}
+------------------------------------------------------------------------
 ### **🚀 Proyectos Transformadores**
 
 -   **Tren Maya**: Terminal en Teya (2024)
@@ -416,37 +341,7 @@ ggplotly(p5) %>%
 -   **Ampliación BiciRuta**: Meta 50 km
 -   **Electromovilidad**: Autobuses eléctricos piloto
 
-```{r rutas-transporte}
-#| fig-cap: "Red de Transporte Público Mérida"
-
-# Datos principales rutas transporte
-rutas_tp <- data.frame(
-  ruta = c("Va y Ven Ruta 1", "Va y Ven Ruta 2", "Periférico", "Centro-Norte",
-           "Oriente-Poniente", "Ruta Maya", "BiciRuta Troncal", "Circuito Colonias"),
-  tipo = c("BRT", "BRT", "Urbano", "Urbano", "Urbano", "Turístico", "Ciclovia", "Urbano"),
-  usuarios_dia = c(45000, 35000, 25000, 18000, 22000, 5000, 2500, 15000),
-  km_longitud = c(22, 18, 35, 15, 20, 12, 28, 25),
-  estado = c("Operando", "Operando", "Operando", "Operando", "Operando", 
-             "Operando", "Operando", "Operando")
-)
-
-# Gráfico rutas
-p6 <- ggplot(rutas_tp, aes(x = km_longitud, y = usuarios_dia, 
-                          color = tipo, size = usuarios_dia)) +
-  geom_point(alpha = 0.8) +
-  geom_text(aes(label = ruta), vjust = -1.2, size = 2.5, color = "white") +
-  scale_color_brewer(type = "qual", palette = "Set2") +
-  scale_size_continuous(range = c(4, 12)) +
-  labs(
-    title = "Eficiencia Rutas de Transporte",
-    subtitle = "Usuarios diarios vs Longitud de ruta",
-    x = "Longitud Ruta (km)", y = "Usuarios por Día",
-    color = "Tipo", size = "Usuarios"
-  )
-
-ggplotly(p6) %>%
-  layout(plot_bgcolor = 'rgba(0,0,0,0)', paper_bgcolor = 'rgba(0,0,0,0)')
-```
+------------------------------------------------------------------------
 
 ### **📱 Tecnología para la Movilidad**
 
@@ -454,38 +349,4 @@ ggplotly(p6) %>%
 -   **Google Maps**: Integración rutas
 -   **Waze**: Datos tráfico colaborativo
 -   **Sensores inteligentes**: Conteo vehículos
-:::
-:::
-
 ------------------------------------------------------------------------
-
-## 🛠️ Herramientas y Datos Disponibles {background-color="#2c3e50"}
-
-::: columns
-::: {.column width="50%"}
-### **🏛️ Fuentes Oficiales**
-
--   **CONAGUA**: Datos hidrológicos y meteorológicos
--   **SEMARNAT Yucatán**: Calidad aire y residuos
--   **INEGI**: Censos y encuestas urbanas
--   **Ayuntamiento Mérida**: Datos abiertos
--   **SEDUMA**: Secretaría Desarrollo Urbano
-
-### **🌐 Plataformas Tecnológicas**
-
--   **SINAICA**: Sistema Nacional Información Calidad Aire
--   **Monitor Atmosférico**: Universidad Autónoma Yucatán
--   **OpenStreetMap**: Mapeo colaborativo Mérida
--   **NASA FIRMS**: Detección incendios
--   **Copernicus Climate Data**: Datos climáticos
-
-### **📊 Herramientas de Análisis**
-
--   **R/RStudio**: Análisis estadístico
--   **QGIS**: Sistemas información geográfica
--   **Python**: Machine learning ambiental
--   \*\*Google
-:::
-:::
-:::
-:::
