--- a/Pre_1.qmd
+++ b/Pre_1.qmd
@@ -443,7 +443,9 @@ cicloviasmap
 
 ------------------------------------------------------------------------
 
-![Ciclovias H3](Datos/densidad_ciclovías.png){width="638"}
+
+## ![Ciclovias H3](Datos/densidad_ciclovías.png){width="638"}
+
 
 ------------------------------------------------------------------------
 
